# skbc_two_package_demo

./: CMakeLists.txt  pyproject.toml
bar/: __init__.py  bar.c
foo/: __init__.py  foo.c
